# cmake

./: CMakeLists.txt  README.md
case1/: CMakeLists.txt  hello.cpp  main.cpp
case2/: CMakeLists.txt  hello.cpp
case3/: CMakeLists.txt
case3/app/: CMakeLists.txt  main.cpp
case3/lib/: CMakeLists.txt  hello.cpp
case4/: CMakeLists.txt
case4/app/: CMakeLists.txt
case4/lib/: CMakeLists.txt  hello.cpp
case5/: CMakeLists.txt  main.cpp
