MESSAGE(STATUS "PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}")

#include_directories(
MESSAGE(STATUS "${PROJECT_SOURCE_DIR}")

set (CASE4_APP_SRC 
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(case4_out ${CASE4_APP_SRC})
target_link_libraries(case4_out case4)
